<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutOptions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOptionsBackground"
    android:orientation="vertical"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textOptions"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/options"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColorDefault"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/background_note_color_default" />

            <ImageView
                android:id="@+id/imageColorDefault"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColorYellow"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/background_note_color_yellow" />

            <ImageView
                android:id="@+id/imageColorYellow"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColorRed"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/background_note_color_red" />

            <ImageView
                android:id="@+id/imageColorRed"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColorBlue"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/background_note_color_blue" />

            <ImageView
                android:id="@+id/imageColorBlue"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColorBlack"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/background_note_color_black" />

            <ImageView
                android:id="@+id/imageColorBlack"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textPickColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/select_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"/>

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"/>

        <TextView
            android:id="@+id/textAddURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setNotification"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_notification" />

        <TextView
            android:id="@+id/textNotificationNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_notification"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>